--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -62,6 +62,10 @@ label {
     display: inline-block;
 }
 
+.inline {
+    display: inline;
+}
+
 /* *********************** Navigation ************************ */
 .custom_navbarbg-blue {
     background-color: #037D9A;
@@ -459,13 +463,13 @@ label {
     background-color: #94DCE0;
 }
 
-#rsvpYes:hover, #rsvpNo:hover, #inputSubmitYes:hover, #inputSubmitNo:hover {
+#rsvpYes:hover, #rsvpNo:hover, #inputSubmitYes:hover, #inputSubmitNo:hover, #buttonClose:hover {
     background-color: #94DCE0;
     color: #000;
     font-weight: bold;
 }
 
-#inputSubmitYes, #inputSubmitNo {
+#inputSubmitYes, #inputSubmitNo, #buttonClose {
     border-color: #ced4da;
     font-family: 'EB Garamond', serif;
     font-size: 1.25rem;
@@ -491,11 +495,17 @@ label {
 
 .btn-disabled {
     pointer-events: none;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
 
 .smalltext {
     text-align: center;
     font-size: 1rem;
+}
+
+#submitMessage p {
+    margin: 0.5em 0;
 }
 
 /* *********************** Footer ************************ */
