Fix jquery validation again

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -63,7 +63,7 @@ label {
 }
 
 .inline {
-    display: inline;
+    display: inline !important;
 }
 
 /* *********************** Navigation ************************ */
