--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -72,6 +72,10 @@ label {
     padding: 0 20px;
 }
 
+.underline {
+    text-decoration: underline;
+}
+
 /* *********************** Navigation ************************ */
 .custom_navbarbg-blue {
     background-color: #037D9A;
@@ -508,6 +512,7 @@ label {
 .smalltext {
     text-align: center;
     font-size: 1rem;
+    line-height: 1.5rem;
 }
 
 #submitMessage p {
@@ -528,6 +533,21 @@ label {
     font-size: 1.5rem;
     line-height: 2rem;
     text-align: center;
+}
+
+/* ********************** Redirect *********************** */
+.redirect {
+    background-color: #94DCE0;
+    width: 100%;
+    height: 100vh;
+}
+
+.redirect_frame {
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    top: 25%;
+    bottom: 25%;
 }
 
 @media only screen and (max-width: 992px) {
