Added submit once option and last photo

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -68,6 +68,11 @@ label {
     margin: 0.15rem;
 }
 
+.hidden {
+    visibility: hidden;
+    display: none;
+}
+
 #submitModal {
     padding: 0 20px;
 }
